--- a/fundamental algebra and analysis/fundamental algebra and analysis.tex
+++ b/fundamental algebra and analysis/fundamental algebra and analysis.tex
@@ -1024,7 +1024,7 @@ A_1 \times \cdots \times A_n.
 \begin{axiomenv}[Axiom of choice]
 In this book, we adopt the following axiom. If $I$ is a non-empty set and if $(A_i)_{i \in I}$ is a family of non-empty sets, then the direct product $\prod_{i \in I} A_i$ is not empty.
 \end{axiomenv}
-\begin{propositionenv}
+\begin{propositionenv}\label{3.9.3}
 \label{prop:direct-product-bijection}
 Let $I$ be a set and $(A_i)_{i \in I}$ be a family of sets parametrised by $I$. For any set $X$, the mapping
 \[
@@ -2018,16 +2018,16 @@ Let $f_a:x\mapsto a ,f_b:x\mapsto b ,\forall x\in X$ Then, $f_a\circ f_b=f_a,f_b
     $$e \in H_i,\forall i \in I\Rightarrow e\in \bigcap_{i\in I}H_i=H$$
     For group case,to check $x*\iota(y)\in H$ like above.
 \end{proofenv}
-\section{Homomophism}
+\section{Homomorphism}
 \begin{definitionenv}
     Let $(M,*)$ and $(N,\star)$ be  semigroups, $f:M\rightarrow N$ be a mapping of sets.
     \newline
-    (1) $f$ is called a \textbf{semigroup homomophism} from $(M,*)$ to $(N,\star)$ if
+    (1) $f$ is called a \textbf{semigroup homomorphism} from $(M,*)$ to $(N,\star)$ if
     $$f(a*b)=f(a)\star f(b),\forall a,b\in M$$
-    (2) If moreover, $(M,*)$ and $(N,\star)$ are both monoids with neutral elements $e_M,e_N$ ,$f$ is called a \textbf{monoid homomophism} if 
+    (2) If moreover, $(M,*)$ and $(N,\star)$ are both monoids with neutral elements $e_M,e_N$ ,$f$ is called a \textbf{monoid homomorphism} if 
      $$f(a*b)=f(a)\star f(b),\forall a,b\in M$$ 
      $$f(e_M)=e_N$$
-    (3) If moreover,$(M,*)$ and $(N,\star)$ are both groups, $f$ is called a \textbf{group homomophism} if 
+    (3) If moreover,$(M,*)$ and $(N,\star)$ are both groups, $f$ is called a \textbf{group homomorphism} if 
     $$f(a*b)=f(a)\star f(b),\forall a,b\in M$$
     $$f(e_M)=e_N$$
     $$f(\iota(a))=\iota(f(a)),\forall a\in M$$
@@ -2036,7 +2036,7 @@ Let $f_a:x\mapsto a ,f_b:x\mapsto b ,\forall x\in X$ Then, $f_a\circ f_b=f_a,f_b
 \begin{propositionenv}
     \quad 
     \newline
-    Let $f:(M,*)\rightarrow (N,\star)$ be a semigroup (resp. monoid,group) homomophism.If $M_1$ is a subsemigroup (resp. submonoid,subgroup) of $M$, then the image $f(M_1)$ is a subsemigroup (resp. submonoid,subgroup).
+    Let $f:(M,*)\rightarrow (N,\star)$ be a semigroup (resp. monoid,group) homomorphism.If $M_1$ is a subsemigroup (resp. submonoid,subgroup) of $M$, then the image $f(M_1)$ is a subsemigroup (resp. submonoid,subgroup).
 \end{propositionenv}
 \begin{proofenv}
     The semigroup case.Let $x,y\in f(M_1)$, we may write $x=f(a),y=f(b),a,b\in M_1$
@@ -2051,14 +2051,14 @@ Let $f_a:x\mapsto a ,f_b:x\mapsto b ,\forall x\in X$ Then, $f_a\circ f_b=f_a,f_b
 \begin{remark}
     \quad
     \newline
-    (1) The semigroup homomophism
+    (1) The semigroup homomorphism
     $$f:(\NN,\times)\rightarrow (\NN,\times),n\mapsto 0$$
-    of two monoids,but is not a monoid homomophism,and its image is $\{0\}$, which is not a submonoid of $(\NN,\times)$.
+    of two monoids,but is not a monoid homomorphism,and its image is $\{0\}$, which is not a submonoid of $(\NN,\times)$.
     \newline
-    (2) Let $M$ be a semigroup (resp. monoid,group) and let $N$ be a subsemigroup (resp. submonoid,subgroup).Then the inclusion mapping $\jmath :N\rightarrow M$ is a semigroup (resp. monoid, group) homomophism.
+    (2) Let $M$ be a semigroup (resp. monoid,group) and let $N$ be a subsemigroup (resp. submonoid,subgroup).Then the inclusion mapping $\jmath :N\rightarrow M$ is a semigroup (resp. monoid, group) homomorphism.
 \end{remark}
 \begin{propositionenv}\label{propositions5.4.2}
-    Let $(X,*)\overset{f}{\rightarrow} (Y,\star)\overset{g}{\rightarrow}(Z,\diamond ) $ be semigroup (resp. monoid, group) homomophisms.Then so does the composite mapping $g\circ f$.
+    Let $(X,*)\overset{f}{\rightarrow} (Y,\star)\overset{g}{\rightarrow}(Z,\diamond ) $ be semigroup (resp. monoid, group) homomorphisms.Then so does the composite mapping $g\circ f$.
 \end{propositionenv}
 \begin{proofenv}
     The semigroup case.
@@ -2072,7 +2072,7 @@ Let $f_a:x\mapsto a ,f_b:x\mapsto b ,\forall x\in X$ Then, $f_a\circ f_b=f_a,f_b
     $$(g\circ f)(\iota(x))=g(f(\iota(x)))=g(\iota(f(x)))=\iota((g\circ f)(x))$$
 \end{proofenv}
 \begin{propositionenv}
-    Let $f:(X,*)\rightarrow (Y,\star)$ be a semigroup (resp.monoid, group) homomophism between semigroups (resp.monoids groups).If $f$ is bijective, then its inverse mapping $f^{-1}:Y\rightarrow X$ is also a semigroup homomophism (resp.monoid,group) 
+    Let $f:(X,*)\rightarrow (Y,\star)$ be a semigroup (resp.monoid, group) homomorphism between semigroups (resp.monoids groups).If $f$ is bijective, then its inverse mapping $f^{-1}:Y\rightarrow X$ is also a semigroup homomorphism (resp.monoid,group) 
 \end{propositionenv}
 \begin{proofenv}
     The semigroup case: Let $y_1,y_2\in Y$ and let $x_i=f^{-1}(y_i),\,i=1,2$.Then 
@@ -2084,12 +2084,12 @@ Let $f_a:x\mapsto a ,f_b:x\mapsto b ,\forall x\in X$ Then, $f_a\circ f_b=f_a,f_b
     $$f^{-1}(\iota(y))\overset{y=f(x)}{=}f^{-1}(\iota(f(x)))=(f^{-1}\circ f)(\iota(x))=\iota(f^{-1}(y))$$
 \end{proofenv}
 \begin{definitionenv}
-    A semigroup (resp. monoid, group) homomophism $f:X\rightarrow Y$ is called a \textbf{semigroup (resp.monoid,group) isomonophism} if there exists a semigroup (resp.monoid,group) homomophism $g:Y\rightarrow X$, such that 
-    $$g\circ f=\mathrm{Id}_X,=f\circ g=\mathrm{Id}_Y$$
+    A semigroup (resp. monoid, group) homomorphism $f:X\rightarrow Y$ is called a \textbf{semigroup (resp.monoid,group) isomorphism} if there exists a semigroup (resp.monoid,group) homomorphism $g:Y\rightarrow X$, such that 
+    $$g\circ f=\mathrm{Id}_X,f\circ g=\mathrm{Id}_Y$$
 \end{definitionenv}
-By Proposition \ref{propositions5.4.2}, a semigroup (resp.monoid group) homomophism is a semigroup (resp.monoid ,group) isomonophism if and only if $f$ is a bijection.
+By Proposition \ref{propositions5.4.2}, a semigroup (resp.monoid group) homomorphism is a semigroup (resp.monoid ,group) isomorphism if and only if $f$ is a bijection.
 \begin{propositionenv}
-    Let $(G,*)$ be a group.The inversion mapping $\imath :(G,*)\rightarrow(G,\hat{*})$ is a group isomonophism.
+    Let $(G,*)$ be a group.The inversion mapping $\imath :(G,*)\rightarrow(G,\hat{*})$ is a group isomorphism.
 \end{propositionenv}
 \section{Quotient}\label{5.5}
 \begin{definitionenv}
@@ -2182,7 +2182,7 @@ is called the \textbf{quotient mapping}.
     (1) If $*:X\times X\rightarrow X$ is associative (resp.communitative) then so is $$*:(X/\sim)\times(X/\sim)\rightarrow X/\sim$$
     (2) If $e$ is a neutral element of $(X,*)$, then $[e]$ is a neutral element of $(X/\sim,*)$.
     \newline
-    (3) If $(X,*)$ is a semigroup (resp. monoid), then the projection $$\pi:X\rightarrow X/\sim, x\mapsto[x]$$ is a homomophism of  semigroup (resp.monoid).
+    (3) If $(X,*)$ is a semigroup (resp. monoid), then the projection $$\pi:X\rightarrow X/\sim, x\mapsto[x]$$ is a homomorphism of  semigroup (resp.monoid).
     \newline
     (4) If $(X,*)$ is a monoid, $x\in X$ is invertible, then $[x]$ is invertible in $(X/\sim,*)$.
 \end{propositionenv}
@@ -2195,12 +2195,12 @@ is called the \textbf{quotient mapping}.
     communitative:
     $[x]*[y]=[x*y]=[y*x]=[y]*[x]$
     \newline
-    (2) $[e]*[x]=[e*x][x],[x]*[e]=[x*e]=[x]$.
+    (2) $[e]*[x]=[e*x]=[x],[x]*[e]=[x*e]=[x]$.
     \newline
     (3) $$\pi(x*y)=[x*y]=[x]*[y]=\pi(x)*\pi(y)$$
     $\pi(e)=[e]$ is the neutral element of $(X/\sim,*)$.
     \newline
-    (4) By (3), $\pi$ is a homomophism of monoid, $\forall x \in X^\times, \pi(x)=[x]\in (X/\sim )^\times $ and $\iota([x])=[\iota(x)]$.
+    (4) By (3), $\pi$ is a homomorphism of monoid, $\forall x \in X^\times, \pi(x)=[x]\in (X/\sim )^\times $ and $\iota([x])=[\iota(x)]$.
 \end{proofenv}
 \begin{remark}
     If $(X,*)$ is a group, so is $(X/\sim,*)$.
@@ -2211,18 +2211,18 @@ is called the \textbf{quotient mapping}.
     If $(X,*)$ is a semigroup (resp. monoid, group), then $(X/\sim, *)$ is called the \textbf{quotient semigroup} (resp. quotient monoid, quotient group) of $(X,*)$ by $\sim$.
 \end{definitionenv}
 \begin{definitionenv}
-    Let $(X,*),(Y,\star)$ be groups and $f:X\rightarrow Y$ be a homomophism of groups. We define the \textbf{kernel} of $f$ as 
+    Let $(X,*),(Y,\star)$ be groups and $f:X\rightarrow Y$ be a homomorphism of groups. We define the \textbf{kernel} of $f$ as 
     $$\ker(f):=\{x\in X\mid f(x)=e_Y\}$$
     where $e_Y$ is the neutral element of $Y$.
 \end{definitionenv}
 \begin{propositionenv}
-    Let $(X,*)$ be a monoid, $(Y,\star)$ be a semigroup, $f:X\rightarrow Y$ be a homomophism of semigroups. If $f$ is surjective, then $(Y,\star)$ is a monoid, and $f$ is a homomophism of monoid.
+    Let $(X,*)$ be a monoid, $(Y,\star)$ be a semigroup, $f:X\rightarrow Y$ be a homomorphism of semigroups. If $f$ is surjective, then $(Y,\star)$ is a monoid, and $f$ is a homomorphism of monoid.
 \end{propositionenv}
 \begin{proofenv}
     We check that $f(e_X)$ is the neutral element of $Y$. $\forall y\in Y,\exists x\in X,f(x)=y$. So $f(e_X)\star y=f(e_X)\star f(x)=f(e_X*x)=f(x)=y$. Also $y\star f(e_X)=f(x)\star f(e_X)=f(x*e_X)=f(x)=y$.
 \end{proofenv}
 \begin{propositionenv}
-    Let $(X,*)$ be a monoid and $(Y,\star)$ be a group. If $f:X\rightarrow Y$ is a homomophism of semigroups, then it is homomophism of monoids.
+    Let $(X,*)$ be a monoid and $(Y,\star)$ be a group. If $f:X\rightarrow Y$ is a homomorphism of semigroups, then it is homomorphism of monoids.
 \end{propositionenv}
 \begin{proofenv}
     Let $e_X$ and $e_Y$ be neutral elements of $X$ and $Y$. One has $e_X=e_X*e_X$, so $f(e_X)=f(e_X)\star f(e_X)$, so $e_Y=f(e_X)$.
@@ -2279,12 +2279,12 @@ is called the \textbf{quotient mapping}.
     If $H$ is a normal subgroup of $G$, we denote by $G/H$ the quotient group $G/\sim_H$.
 \end{notationenv}
 \begin{theoremenv}
-    Let $f:(X,*)\rightarrow (Y,\star)$ be a homomophism of groups, and $K=\ker(f)$. Then $\sim_K$ is compatible with $f$, and $f$ induces by passing to quotient a mapping
+    Let $f:(X,*)\rightarrow (Y,\star)$ be a homomorphism of groups, and $K=\ker(f)$. Then $\sim_K$ is compatible with $f$, and $f$ induces by passing to quotient a mapping
     $$\tilde{f}:X/K\longrightarrow Y$$
-    which is actually an injective homomophism of groups, with $\tilde{f}(X/K)=f(X)$. In particular, $X/K$ is isomonophism to $f(X)$.
+    which is actually an injective homomorphism of groups, with $\tilde{f}(X/K)=f(X)$. In particular, $X/K$ is isomorphism to $f(X)$.
         \begin{center}
 \begin{tikzcd}
-    X\arrow[d,swap,"\pi"]\arrow[r,"f"]& f(x)\subseteq Y\\
+    X\arrow[d,swap,"\pi"]\arrow[r,"f"]& f(X)\subseteq Y\\
     X/\ker(f) \arrow[ur,swap,"\tilde{f}"]
 \end{tikzcd}
 \end{center}
@@ -2292,6 +2292,115 @@ is called the \textbf{quotient mapping}.
 \begin{proofenv}
     Let $x$ and $y$ be elements of $X$. $x\sim_K y\Leftrightarrow x*\iota(y)\in K$. Hence $f(x)\star \iota(f(y))=f(x*\iota(y))=e_Y$. So $f(x)=f(y)$. $\tilde{f}([x]*[y])=\tilde{f}([x*y])=f(x*y)=f(x)\star f(y)=\tilde{f}([x])\star \tilde{f}([y])$.
 \end{proofenv}
+
+\section{Universal Homomorphisms}
+\begin{propositionenv}
+    Let $(M,*)$ be a monoid, $x\in M$. Then there exists a unique homomorphism of monoid $f:(\NN,+)\rightarrow (M,*)$ such that $f(1)=x$.
+\end{propositionenv}
+\begin{proofenv}
+    We construct a mapping $f:\NN\rightarrow M$ in a recursive way as follows: $f(0)=e_M$. For any $n\in \NN$, we let $f(n+1)=f(n)*x$. We will prove that $f$ is a homomorphism of monoids, that is 
+    $$\forall (n,m)\in \NN\times \NN,f(n+m)=f(n)*f(m)$$
+    We reason by induction on $m$. If $m=0$, $f(n)=f(n)*e_M$. Suppose that $f(n+m)=f(n)*f(m)$. One has $$f(n+m+1)=f(n+1)*f(m)=f(n)*f(1)*f(m)=f(n)*f(m+1)$$
+    If $g:\NN\rightarrow M$ is a homomorphism of monoid, such that $g(1)=x$. Since $g(n+1)=g(n)*g(1)=g(n)*x$, we have $g(n)=f(n)$. By induction, $\forall n\in \NN,g(n)=f(n)$. So $f$ is unique.
+\end{proofenv}
+\begin{notationenv}
+    Let $(M,*)$ be a monoid, $x\in M$, $f:(\NN,+)\rightarrow (M,*)$ be the unique homomorphism of monoid, such that $f(1)=x$. $\forall n\in \NN$, we denote by $x^{*n}$ the element $f(n)\in M$, $x^{*0}=e_M$, $x^{*(n+m)}=x^{*n}*x^{*m}$.
+    \newline
+    Two exceptions: If $*=\cdot$ is written multiplicatively, $x^{*n}$ is written as $x^n$. If $*=+$, then $x^{*n}$ is written as $nx$. 
+\end{notationenv}
+\begin{propositionenv}
+    Let $(M,*)$ be a monoid, $x\in M$. There exists a unique homomorphism of monoids $f:(\ZZ,+)\rightarrow (M,*)$ such that $f(1)=x$. Note that  $f(\ZZ)\subseteq M^\times$. So $f$ defines a homomorphism of groups $f:(\ZZ^\times,+)\rightarrow (M^\times,*)$.
+\end{propositionenv}
+\begin{proofenv}
+    We define $f$ as 
+    $$f(n):=\left\{\begin{matrix}
+        x^{*n},&n\ge 0\\
+        \iota(x^{*(-n)}),&n<0
+    \end{matrix}\right.$$
+    Let $n,m$ be two elements of $\ZZ$.
+    \newline
+    (1) If $n,m>0$. Then $f(n+m)=x^{*n}*x^{*m}=f(n+m)$.
+    \newline
+    (2) If $n,m<0$. Then $f(n+m)=\iota(x^{*(-n-m)})=\iota(x^{*(-m)}*x^{*(-n)})=\iota(x^{*(-n)})*\iota(x^{*(-m)})=f(n)*f(m)$.
+    \newline
+    (3) If $n>0,m<0$ and $n+m>0$. Then $$f(n+m)=x^{*(n-(-m))}=x^{*n}*\iota(x^{*(-m)})=f(n)*f(m)$$
+    (4) If $n>0,m<0$ and $n+m<0$. Then $$f(n+m)=\iota(x^{*(-n-m)})=\iota(\iota(x^{*n})*x^{*(-m)})=\iota(x^{*(-m)})*x^{*n}=f(m)*f(n)$$
+\end{proofenv}
+\begin{notationenv}
+    If $x\in M^\times$, for any $n\in \ZZ$, let $x^{*n}$ be the image of $n$ by this unique homomorphism of monoids $(\ZZ,+)\rightarrow (M,*),\ 1\mapsto x$. $x^{\cdot n}$ is denoted as $x^n$, $x^{+n}$ is denoted as $nx$.
+\end{notationenv}
+\begin{propositionenv}
+    Let $(M,*)$ be a monoid, $x,y\in M$.
+    \newline
+    (1) If $x*y=y*x$, then $\forall(n,m)\in \NN^2$,
+     $$x^{*n}*y^{*m}=y^{*m}*x^{*n}$$ 
+     $$(x*y)^{*n}=x^{*n}*y^{*n}$$
+    \newline
+    (2) If $x\in M$, $\iota(x^{*n})=\iota(x)^{*n}$ and $\forall (n,m)\in \NN^2$, with $n\ge m$,
+    $$x^{*(n-m)}=x^{*n}*\iota(x)^{*m}$$
+    $$\iota(x^{*(n-m)})=\iota(x)^{*n}*x^{*m}$$
+\end{propositionenv}
+\begin{proofenv}
+   \quad
+   \newline
+    (1) We prove by induction on $n$ such that $x^{*n}*y=y*x^{*n}$.
+    If $n=0$, $x^{*n}=e_M$, so $y*e_M=y=e_M*y$. If $x^{*n}*y=y*x^{*n}$, we have $x^{*n+1}*y=x^{*n}*y*x=y*x^{*n}*x=y*x^{*(n+1)}$. We apply this  statement in replacing $n$ by $m$, $x$ by $y$, and $y$ by $x^{*n}$. From $x^{*n}*y=y*x^{*n}$, we deduce that $y^{*m}*x^{*n}=x^{*n}*y^{*m}$. We prove $(x*y)^{*n}=x^{*n}*y^{*n}$ by induction on $n$. If $n=0,e_M=e_M*e_M$. If $n=1,x*y=x*y$. If $(x*y)^{*n}=x^{*n}*y^{*n}$, then $$(x*y)^{*(n+1)}=(x*y)^{*n}*x*y=x^{*n}*y^{*n}*x*y=x^{*n}*x*y^{*n}*y=x^{*(n+1)}*y^{*(n+1)}$$
+    (2) $x^{*n}*\iota(x)^{*n}=(x*\iota(x))^{*n}=e_{M}^{*n} = e_{M}$, since $(\NN,+)\rightarrow (M,*), n\mapsto e_M$ is a homomorphism of monoids. $\iota(x)^n* x^{*n} = (\iota(x) * x)^{*n} = e_{M}$. If $n \geq m$ 
+$$
+x^{*n} * \iota(x)^{*m} = x^{*(n-m)} * x^{*m} * \iota(x)^{*m} = x^{*(n-m)}
+$$
+$$
+\iota(x)^{*n} * x^{*m} = \iota(x)^{*(n-m)} * \iota(x)^{*m} * x^{*m}=\iota(x)^{*(n-m)}=\iota(x^{*(n-m)})
+$$
+\end{proofenv}
+\begin{definitionenv}
+    Let $I$ be a set. For any $i\in I$, let $(M_i,*_i)$ be a set equipped with a composition law. Let 
+    $$M=\prod_{i\in I}M_i=\{(x_i)_{i\in I}\mid \forall i\in I,x_i\in M_i\}$$ 
+    We define a composition law on $M$ such that 
+    $$(x_i)_{i\in I}*(y_i)_{i\in I}=(x_i*y_i)_{i\in I}$$
+    For any $j\in I$, let $\pi_j:M\rightarrow M_j,\ (x_i)_{i\in I}\mapsto x_j$
+\end{definitionenv}
+\begin{propositionenv}
+    \quad 
+    \newline
+    (1) If $\forall i\in I, *_i$ is commutative, then $*$ is communitative.
+    \newline
+    (2) If $\forall i\in I, *_i$ is associative, then $*$ is associative. Moreover, $\pi_j:(M,*)\rightarrow (M_j,*_j)$ is a homomorphism of semigroups.
+    \newline
+    (3) If $\forall i\in I$, $e_i$ is a neutral element of $(M_i,*_i)$, then $e:=(e_i)_{i\in I}$ is a neutral element of $(M,*)$. Moreover, if each $(M_i,*_i)$ is a monoid, then $\pi_j:(M,*)\rightarrow (M_j,*_j)$ is a homomorphism of monoids.
+    \newline
+    (4) Assume that each $(M_i,*_i)$ is a monoid. Then $M^\times=\prod_{i\in I}M_i^\times$. In particular, if each $(M_i,*_i)$ is a group, then $M^\times=\prod_{i\in I}M_i^\times$ is also a group.
+\end{propositionenv}
+\begin{proofenv}
+    If $(x_i)_{i\in I}, (y_i)_{i\in I}\in M$, then $\pi_j(x*y)=\pi_j((x_i*y_i)_{i\in I})=x_j*_jy_j=\pi_j(x)*\pi_j(y)$.
+    \newline
+    proof of (4): Assume that $x=(x_i)_{i\in I}\in M^\times$. Then $\exists y=(y_i)_{i\in I}\in M^\times$ such that $x*y=e:=(e_i)_{i\in I}$, where $e_i$ is the neutral element of $(M_i,*_i)$. $x*y=(x_i*y_i)_{i\in I}=(e_i)_{i\in I}=$. So $x_i*_iy_i=e_i$ for all $i\in I$. Therefore, $x_i\in M_i^\times$ for all $i\in I$. Hence $M^\times\subseteq\prod_{i\in I}M_i^\times$.
+    Now let $x=(x_i)_{i\in I}\in \prod_{i\in I}M_i^\times$. We claim that $(\iota(x_i))_{i\in I}$ is the inverse of $x$. In fact $(x_i)_{i\in I}*(\iota(x_i))_{i\in I}=e$. So $x\in M^\times$.
+\end{proofenv}
+\begin{theoremenv}
+    Suppose that each $(M_i,*_i)$ is a semigroup. Let $(N,\star)$ be a semigroup (resp. monoid, group). For any $i\in I$, let $f_i:N\rightarrow M_i$ be a homomorphism of semigroups (resp. monoid, group). Then there is a unique homomorphism of semigroups (resp. monoid, group) $f:M\rightarrow N$ such that $\forall i\in I, \pi_i\circ f=f_i$.
+    \newline
+    $(M,*)$ is called the \textbf{product} of $(M_i,*_i)$.
+\end{theoremenv}
+\begin{proofenv}
+    By Proposition~\ref{prop:direct-product-factorization}, there exists a unique mapping $f:N\rightarrow M$ such that $\forall i\in I, \pi_i\circ f=f_i $. We check that $f$ is a homomorphism. 
+    \newline
+    Recall that $\forall y\in N, f(y)=(f_i(y))_{i\in I}$. If $(y,z)\in N\times N$, then $f(y*z)=(f_i(y)*f_i(z))_{i\in I}=(f_i(y))_{i\in I}*(f_i(z))_{i\in I}=f(y)*f(z)$. If each $(M_i,*_i)$ is a monoid with neutral element $e_i$, and $e_N$ is the neutral element of $N$, in the case where each $f_i$ is a homomorphism of monoids $(f_i(e_N)=e_i)$. One has $f(e_n)=(f_i(e_N))_{i\in I}=(e_i)_{i\in I}$ is the neutral element of $M$.
+\end{proofenv}
+\begin{notationenv}
+    Let $M$ be a communitative monoid, $(x_i)_{i\in I}$ be a family of elements in $M$. We suppose that $I_0=\{i\in I\mid x_i\not=e\}$ is finite. We pick a natural number $n$ and a bijection $\sigma:\{1,2,\dots,n\}\rightarrow I_0$. If the composition law of $M$ is written as $+$, then 
+    $$\sum_{i\in I}x_i \text{ denotes }(x_{\sigma(1)}+x_{\sigma(2)}+\cdots+x_{\sigma(n)})$$
+    it denotes the neutral element $0$ of $M$ when $I_0=\varnothing$. If the composition law of $M$ is written as $\cdot$, then 
+    $$\prod_{i\in I}x_i \text{ denotes }(x_{\sigma(1)}\cdot x_{\sigma(2)}\cdots x_{\sigma(n)})$$
+    it denotes the neutral element $1$ of $M$ when $I_0=\varnothing$.
+    \newline
+    Let $(M_i)_{i\in I}$ be a family of communitative monoids. (The composition law of $M_i$ is written additively, the neutral element of $M_i$ is written $0$)
+\end{notationenv}
+\begin{definitionenv}
+    We denote by 
+    $$\bigoplus_{i\in I}M_i$$ 
+    the set of $(x_i)_{i\in I}\in \prod_{i\in I}M_i$ such that $\{i\in I\mid x_i\not=0\}$ is finite. 
+\end{definitionenv}
 
 
 
