--- a/exercise/maths/FAA/fundamental algebra and analysis.tex
+++ b/exercise/maths/FAA/fundamental algebra and analysis.tex
@@ -238,8 +238,8 @@ F & F &  F &   T&   T&   T\\ \hline
             \item 
         \end{enumerate}
     \item Let $E=\{1,2,\dots,n\}$, $\forall \sigma\in \mathfrak{S}_E,$
-            $$\prod_{i,j\in E}[\sigma(i)=\sigma(j)]=\prod_{i,j\in E}(i-j)$$
-            $$\prod_{i,j\in E}(i-j)[(\sigma\circ \pi) (i)-(\sigma\circ\pi)(j)]=\prod_{i,j\in E}[\sigma(i)-\sigma(j)][\pi(i)-\pi(j)]$$
+            $$\prod_{i\not=j\in E}[\sigma(i)-\sigma(j)]=\prod_{i\not=j\in E}(i-j)$$
+            $$\prod_{i\not=j\in E}(i-j)[(\sigma\circ \pi) (i)-(\sigma\circ\pi)(j)]=\prod_{i\not=j\in E}[\sigma(i)-\sigma(j)][\pi(i)-\pi(j)]$$
             $$\prod_{i<j\in E}(i-j)[(\sigma\circ \pi) (i)-(\sigma\circ\pi)(j)]=\prod_{i<j\in E}[\sigma(i)-\sigma(j)][\pi(i)-\pi(j)]$$
             $$\prod_{i<j\in E}\frac{[(\sigma\circ \pi) (i)-(\sigma\circ\pi)(j)]}{i-j}=\prod_{i<j\in E}\frac{\sigma(i)-\sigma(j)}{i-j}\prod_{i<j\in E}\frac{\pi(i)-\pi(j)}{i-j}$$
             Hence, $\mathrm{sgn}$ is a homomorphism.
