--- a/exercise/physics/Quantum Mechanics/HW2/HW2.tex
+++ b/exercise/physics/Quantum Mechanics/HW2/HW2.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 \newcommand{\mydate}{September 14, 2025}
-\title{QM HW2}
+\title{\textbf{QM HW2}}
 \author{Jiete XUE}
 \date{\mydate}
 \usepackage{fancyhdr}
