--- a/exercise/maths/FAA/fundamental algebra and analysis.tex
+++ b/exercise/maths/FAA/fundamental algebra and analysis.tex
@@ -253,4 +253,19 @@ F & F &  F &   T&   T&   T\\ \hline
         Easy to check that $\tau_i\circ\tau_i=\mathrm{Id}_E$. So $\forall f \text{ be a homomorphism, },f(\tau_i)f(\tau_i)=1,f(\tau_i)=\pm 1$. Then $\forall \sigma \in \mathfrak{S}_E, f(\sigma)=\pm1$.
 \end{enumerate}
 \textbf{Remark.  }$f=-1$ corresponds to the $\mathrm{sgn}$ in 17.
+\section{Rings and Modules}
+\begin{enumerate}
+    \item 
+        \begin{enumerate}
+            \item First, we check that it is a monoid. \newline One has it is closed. For any $(x_1,x_2)\in \ZZ^2, (x_1,x_2)*(1,0)=(x_1,x_2)$. So $(1,0)$ is the neutral element.
+            \item Second, check that it is commutative. \newline For any $(x_1,x_2),(y_1,y_2)\in \ZZ^2, (x_1,x_2)*(y_1,y_2)=(x_1y_1+rx_2y_2,x_1y_2+x_2y_1)=(y_1x_1+ry_2x_2,y_1x_2+y_2x_1)=(y_1,y_2)*(x_1,x_2)$.
+            \item Third, check that it is distributive. \newline For any $(x_1,x_2),(y_1,y_2),(z_1,z_2)\in \ZZ^3, (x_1,x_2)*((y_1,y_2)+(z_1,z_2))=(x_1(y_1+z_1)+rx_2(y_2+z_2),x_1(y_2+z_2)+x_2(y_1+z_1))=(x_1,x_2)*(y_1,y_2)+(x_1,x_2)*(z_1,z_2)$. 
+        \end{enumerate}
+    \item
+        \begin{enumerate}
+            \item Associativity is NOT valid in general.
+            \item Just verify.
+        \end{enumerate}
+    \item Let $e_i=(0,\dots,1,\dots,0)$
+\end{enumerate}
 \end{document}
