--- a/exercise/physics/Quantum Mechanics/HW2/HW2.tex
+++ b/exercise/physics/Quantum Mechanics/HW2/HW2.tex
@@ -177,8 +177,9 @@ When $n=0$,
     \end{equation}
     It is exactly the Hamilton-Jacobi equation. The quantum potential is 
     \begin{equation}
-        \boxed{V_{\text{quantum}}=-\frac{i}{2m\hbar}\nabla^2S}
+        \boxed{V_{\text{quantum}}=-\frac{i\hbar}{2m}\nabla^2S}
     \end{equation}
+    It vanishes as $\hbar\rightarrow 0$.
 \end{problem}
 
 \end{document}
